<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorPrimaryDark"
            android:id="@+id/constraintLayout"
            android:layout_height="160dp"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:gravity="center"
                android:id="@+id/display"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="0dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:background="@color/colorLightBlack"
            android:id="@+id/linearLayout"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_width="0dp"
            app:layout_constraintEnd_toStartOf="@+id/clear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <ImageButton
                    android:backgroundTint="@color/colorBlack"
                    android:id="@+id/backDelete"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="20dp"
                    android:src="@drawable/ic_baseline_backspace_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            style="@style/Button"
            android:background="@color/colorLightBlack"
            android:id="@+id/clear"
            android:layout_height="50dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_width="100dp"
            android:text="@string/clear"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            style="@style/Button"
            android:id="@+id/div"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/divide"
            app:layout_constraintBottom_toTopOf="@+id/multi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintStart_toStartOf="@+id/clear"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <TextView
            style="@style/Button"
            android:id="@+id/plus"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sub"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sub"
            app:layout_constraintTop_toBottomOf="@+id/sub" />

        <TextView
            style="@style/Button"
            android:id="@+id/multi"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toTopOf="@+id/sub"
            app:layout_constraintEnd_toEndOf="@+id/div"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/div"
            app:layout_constraintTop_toBottomOf="@+id/div" />

        <TextView
            style="@style/Button"
            android:id="@+id/sub"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/subtract"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="@+id/multi"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/multi"
            app:layout_constraintTop_toBottomOf="@+id/multi" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/seven"
            android:layout_height="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/eight"
            android:layout_height="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/nine"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/six"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintEnd_toStartOf="@+id/multi"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/five"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@+id/six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/four"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/three"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@+id/equals"
            app:layout_constraintEnd_toStartOf="@+id/sub"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/two"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/one"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <TextView
            style="@style/Button"
            android:id="@+id/equals"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three" />

        <TextView
            style="@style/DigitButton"
            android:id="@+id/zero"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/equals"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/two" />

        <TextView
            style="@style/Button"
            android:id="@+id/dot"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="0dp"
            android:text="@string/point"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>